site: copy robots.txt file when present